// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default setup 1`] = `
Object {
  "Parameters": Object {
    "AssetParametersebb733d6e04a5bf2fbe4150c006031a3d5eec4a25b0df83c71ec65e72828b39dArtifactHash3F913995": Object {
      "Description": "Artifact hash for asset \\"ebb733d6e04a5bf2fbe4150c006031a3d5eec4a25b0df83c71ec65e72828b39d\\"",
      "Type": "String",
    },
    "AssetParametersebb733d6e04a5bf2fbe4150c006031a3d5eec4a25b0df83c71ec65e72828b39dS3BucketB0535DA6": Object {
      "Description": "S3 bucket for asset \\"ebb733d6e04a5bf2fbe4150c006031a3d5eec4a25b0df83c71ec65e72828b39d\\"",
      "Type": "String",
    },
    "AssetParametersebb733d6e04a5bf2fbe4150c006031a3d5eec4a25b0df83c71ec65e72828b39dS3VersionKey2422C553": Object {
      "Description": "S3 key for asset version \\"ebb733d6e04a5bf2fbe4150c006031a3d5eec4a25b0df83c71ec65e72828b39d\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "ApprovalRuleTemplateCustomResource80C1F447": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "ApprovalRuleTemplateName": "name",
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "CustomApprovalRuleTemplateCustomResourceProviderHandlerF71B1878",
            "Arn",
          ],
        },
        "Template": Object {
          "Approvers": Object {
            "NumberOfApprovalsNeeded": 2,
          },
        },
      },
      "Type": "Custom::ApprovalRuleTemplate",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomApprovalRuleTemplateCustomResourceProviderHandlerF71B1878": Object {
      "DependsOn": Array [
        "CustomApprovalRuleTemplateCustomResourceProviderRoleBFA17D2F",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersebb733d6e04a5bf2fbe4150c006031a3d5eec4a25b0df83c71ec65e72828b39dS3BucketB0535DA6",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersebb733d6e04a5bf2fbe4150c006031a3d5eec4a25b0df83c71ec65e72828b39dS3VersionKey2422C553",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersebb733d6e04a5bf2fbe4150c006031a3d5eec4a25b0df83c71ec65e72828b39dS3VersionKey2422C553",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Handler": "__entrypoint__.handler",
        "MemorySize": 128,
        "Role": Object {
          "Fn::GetAtt": Array [
            "CustomApprovalRuleTemplateCustomResourceProviderRoleBFA17D2F",
            "Arn",
          ],
        },
        "Runtime": "nodejs12.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomApprovalRuleTemplateCustomResourceProviderRoleBFA17D2F": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "codecommit:CreateApprovalRuleTemplate",
                    "codecommit:DeleteApprovalRuleTemplate",
                    "codecommit:GetApprovalRuleTemplate",
                    "codecommit:UpdateApprovalRuleTemplateContent",
                    "codecommit:UpdateApprovalRuleTemplateDescription",
                    "codecommit:UpdateApprovalRuleTemplateName",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "Inline",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;

exports[`list of approvalPoolMembers 1`] = `
Object {
  "Parameters": Object {
    "AssetParametersebb733d6e04a5bf2fbe4150c006031a3d5eec4a25b0df83c71ec65e72828b39dArtifactHash3F913995": Object {
      "Description": "Artifact hash for asset \\"ebb733d6e04a5bf2fbe4150c006031a3d5eec4a25b0df83c71ec65e72828b39d\\"",
      "Type": "String",
    },
    "AssetParametersebb733d6e04a5bf2fbe4150c006031a3d5eec4a25b0df83c71ec65e72828b39dS3BucketB0535DA6": Object {
      "Description": "S3 bucket for asset \\"ebb733d6e04a5bf2fbe4150c006031a3d5eec4a25b0df83c71ec65e72828b39d\\"",
      "Type": "String",
    },
    "AssetParametersebb733d6e04a5bf2fbe4150c006031a3d5eec4a25b0df83c71ec65e72828b39dS3VersionKey2422C553": Object {
      "Description": "S3 key for asset version \\"ebb733d6e04a5bf2fbe4150c006031a3d5eec4a25b0df83c71ec65e72828b39d\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "ApprovalRuleTemplateCustomResource80C1F447": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "ApprovalRuleTemplateName": "name",
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "CustomApprovalRuleTemplateCustomResourceProviderHandlerF71B1878",
            "Arn",
          ],
        },
        "Template": Object {
          "Approvers": Object {
            "ApprovalPoolMembers": Array [
              "arn:aws:sts::123456789012:assumed-role/CodeCommitReview/*",
              "arn:aws:sts::123456789012:assumed-role/LeadDeveloper/*",
            ],
            "NumberOfApprovalsNeeded": 2,
          },
        },
      },
      "Type": "Custom::ApprovalRuleTemplate",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomApprovalRuleTemplateCustomResourceProviderHandlerF71B1878": Object {
      "DependsOn": Array [
        "CustomApprovalRuleTemplateCustomResourceProviderRoleBFA17D2F",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParametersebb733d6e04a5bf2fbe4150c006031a3d5eec4a25b0df83c71ec65e72828b39dS3BucketB0535DA6",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersebb733d6e04a5bf2fbe4150c006031a3d5eec4a25b0df83c71ec65e72828b39dS3VersionKey2422C553",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParametersebb733d6e04a5bf2fbe4150c006031a3d5eec4a25b0df83c71ec65e72828b39dS3VersionKey2422C553",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Handler": "__entrypoint__.handler",
        "MemorySize": 128,
        "Role": Object {
          "Fn::GetAtt": Array [
            "CustomApprovalRuleTemplateCustomResourceProviderRoleBFA17D2F",
            "Arn",
          ],
        },
        "Runtime": "nodejs12.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomApprovalRuleTemplateCustomResourceProviderRoleBFA17D2F": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "codecommit:CreateApprovalRuleTemplate",
                    "codecommit:DeleteApprovalRuleTemplate",
                    "codecommit:GetApprovalRuleTemplate",
                    "codecommit:UpdateApprovalRuleTemplateContent",
                    "codecommit:UpdateApprovalRuleTemplateDescription",
                    "codecommit:UpdateApprovalRuleTemplateName",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "Inline",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;
